--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "expo": "~51.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
+    "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
     "expo-router": "~3.5.17",
-    "expo-image-picker": "~15.0.5",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
+    "flutterwave-react-native": "^1.0.4",
+    "flutterwave-react-v3": "^1.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
@@ -47,7 +49,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
