--- a/package.json
+++ b/package.json
@@ -22,32 +22,31 @@
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
     "axois": "^0.0.1-security",
-    "expo": "~51.0.16",
+    "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
+    "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.5",
     "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "~3.5.21",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.2",
     "flutterwave-react-native": "^1.0.4",
-    "flutterwave-react-v3": "^1.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "^1.15.6",
+    "react-native-maps": "^1.14.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6"
